# ParallelSummation

./: CMakeLists.txt  main.cpp
